feat: update course status
